--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -77,6 +77,22 @@
   Timestamp                = {2017.08.26}
 }
 
+@Article{Witten:1994cg,
+  Title                    = {Monopoles and four manifolds},
+  Author                   = {Witten, Edward},
+  Journal                  = {Math. Res. Lett.},
+  Year                     = {1994},
+  Pages                    = {769--796},
+  Volume                   = {1},
+
+  Bibliodb                 = {yes},
+  Eprint                   = {hep-th/9411102},
+  File                     = {:Witten, Edward - Monopoles and four manifolds.pdf:PDF},
+  Owner                    = {andy},
+  Slaccitation             = {%%CITATION = 00146,1,769;%%},
+  Timestamp                = {2017.08.29}
+}
+
 @Article{Witten:1988ze,
   Title                    = {Topological quantum field theory},
   Author                   = {Witten, Edward},
