fix typo: ASD, not SD

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -496,7 +496,7 @@ explicitly in components, when $G = \U(1)$ or $G = \SU(2)$.
 \end{exercise}
 
 \begin{exercise}
-Show that when $G = \U(1)$, $\cM \simeq \cH_{2}^{+}(X)$; in particular, in this case
+Show that when $G = \U(1)$, $\cM \simeq \cH_{2}^{-}(X)$; in particular, in this case
 $\cM$ is a vector space. \fixme{warning: needs Hodge theory}
 \end{exercise}
 
